# AppComponent

./: .gitignore  README  README.md  README_3.md  build.gradle  demo.gradle  gradle.properties  settings.gradle
app/: build.gradle  kotlin.jks  proguard-rules.pro  readme.md  tinker-support.gradle
app/src/main/cpp/: Android.mk  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/lame/: Mp3Encoder.cpp  Mp3Encoder.h
base_component/: build.gradle
common/lib_code/: build.gradle
common/lib_common/: build.gradle
common/lib_module/: build.gradle
common/lib_style/: build.gradle
demo/demo-hilt/: build.gradle  ddd
demo/demo-retrofit/: build.gradle
demo/demo-skin/: build.gradle
demo/demo-update/: build.gradle
demo/demo_net/: build.gradle
demo/demo_tools/: build.gradle
document/: git.md
document/android/: [Android] EventBus事件总线——优雅地替换Handler .txt  android shape的使用.txt  android 串口.txt  android 注意汇总.txt  android-oneapp.txt  android6.0动态获取权限.txt  android等待界面.txt  c 编译.MD  gridview.txt  readme.md  二维码bug.txt  代码无BUG.txt  复制到剪贴板上.txt  控件——layout  提升android.txt  模拟器.md  滑动冲突listview和swift.txt  第三方的使用.txt  退流和播放.txt
document/java/: readme.md
document/kotlin/: readme.md
document/spring/: readme.md
function/lib_style/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
keystores/: debug.keystore  release.keystore  release.keystore.properties
lib/j_torrent_lib/: build.gradle
lib/lib_camera-card-crop/: build.gradle
lib/lib_code/: build.gradle
lib_net/: build.gradle
lib_style/: build.gradle
lib_swipe_back/: build.gradle
module_main/: build.gradle
module_me/: build.gradle
module_order/: build.gradle
module_pdf/: build.gradle
module_shop/: build.gradle
(+599 files in other folders)
